part4-ha/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-exam
  labels:
    app.kubernetes.io/managed-by: kubectl
